--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <main class="pan">
             <header class="header">
                 <div class="header__container">
-                    <h1 class="header__title">Beroepsorientatie 360</h1>
+                    <h1 class="header__title">Opleiding360</h1>
 
                     <div class="progress__container">
                         <div class="progress">
