Styled the cms some more and added dummy educations for filtering

--- a/cms.html
+++ b/cms.html
@@ -5,7 +5,6 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="css/main.css" />
-        <script src="js/cms.js" defer></script>
         <title>Opleiding360 CMS</title>
     </head>
     <body>
@@ -27,6 +26,42 @@
                     <ul class="schools__list" id="js--schools--list"></ul>
                 </article>
             </section>
+            <section class="educations">
+                <article class="educations__education" data-school="hogeschool-leiden">
+                    <img
+                        src="img/hogeschool_leiden.jpg"
+                        alt=""
+                        class="educations__education__img"
+                    />
+                    <div class="educations__education__info">
+                        <h3 class="educations__education__title">Informatica</h3>
+                        <h4 class="educations__education__school">Hogeschool Leiden</h4>
+                    </div>
+                </article>
+                <article class="educations__education" data-school="hogeschool-utrecht">
+                    <img
+                        src="img/hogeschool_leiden.jpg"
+                        alt=""
+                        class="educations__education__img"
+                    />
+                    <div class="educations__education__info">
+                        <h3 class="educations__education__title">Informatica</h3>
+                        <h4 class="educations__education__school">Hogeschool Utrecht</h4>
+                    </div>
+                </article>
+                <article class="educations__education" data-school="haagse-hogeschool">
+                    <img
+                        src="img/hogeschool_leiden.jpg"
+                        alt=""
+                        class="educations__education__img"
+                    />
+                    <div class="educations__education__info">
+                        <h3 class="educations__education__title">Informatica</h3>
+                        <h4 class="educations__education__school">Haagse Hogeschool</h4>
+                    </div>
+                </article>
+            </section>
         </main>
+        <script src="js/cms.js"></script>
     </body>
 </html>
