--- a/cms.html
+++ b/cms.html
@@ -9,6 +9,20 @@
     </head>
     <body>
         <main class="main">
+            <form
+                method="post"
+                enctype="multipart/form-data"
+                style="margin-bottom: 2rem"
+                id="js--upload--form"
+            >
+                <div>
+                    <label for="file">Upload file</label>
+                    <input type="file" id="file" />
+                </div>
+                <div>
+                    <button>Upload</button>
+                </div>
+            </form>
             <input
                 type="search"
                 name="search"
@@ -27,37 +41,58 @@
                 </article>
             </section>
             <section class="educations">
-                <article class="educations__education" data-school="hogeschool-leiden">
+                <article
+                    class="educations__education"
+                    data-school="hogeschool-leiden"
+                >
                     <img
                         src="img/hogeschool_leiden.jpg"
                         alt=""
                         class="educations__education__img"
                     />
                     <div class="educations__education__info">
-                        <h3 class="educations__education__title">Informatica</h3>
-                        <h4 class="educations__education__school">Hogeschool Leiden</h4>
+                        <h3 class="educations__education__title">
+                            Informatica
+                        </h3>
+                        <h4 class="educations__education__school">
+                            Hogeschool Leiden
+                        </h4>
                     </div>
                 </article>
-                <article class="educations__education" data-school="hogeschool-utrecht">
+                <article
+                    class="educations__education"
+                    data-school="hogeschool-utrecht"
+                >
                     <img
                         src="img/hogeschool_leiden.jpg"
                         alt=""
                         class="educations__education__img"
                     />
                     <div class="educations__education__info">
-                        <h3 class="educations__education__title">Informatica</h3>
-                        <h4 class="educations__education__school">Hogeschool Utrecht</h4>
+                        <h3 class="educations__education__title">
+                            Informatica
+                        </h3>
+                        <h4 class="educations__education__school">
+                            Hogeschool Utrecht
+                        </h4>
                     </div>
                 </article>
-                <article class="educations__education" data-school="haagse-hogeschool">
+                <article
+                    class="educations__education"
+                    data-school="haagse-hogeschool"
+                >
                     <img
                         src="img/hogeschool_leiden.jpg"
                         alt=""
                         class="educations__education__img"
                     />
                     <div class="educations__education__info">
-                        <h3 class="educations__education__title">Informatica</h3>
-                        <h4 class="educations__education__school">Haagse Hogeschool</h4>
+                        <h3 class="educations__education__title">
+                            Informatica
+                        </h3>
+                        <h4 class="educations__education__school">
+                            Haagse Hogeschool
+                        </h4>
                     </div>
                 </article>
             </section>
