--- a/cms.html
+++ b/cms.html
@@ -114,23 +114,23 @@
                 </article>
                 <article class="educations__education" data-school="hogeschool-utrecht">
                     <img
-                        src="img/hogeschool_leiden.jpg"
+                        src="img/hogeschool_utrecht.jpg"
                         alt=""
                         class="educations__education__img"
                     />
                     <div class="educations__education__info">
-                        <h3 class="educations__education__title">Informatica</h3>
+                        <h3 class="educations__education__title">Fysiotherapie</h3>
                         <h4 class="educations__education__school">Hogeschool Utrecht</h4>
                     </div>
                 </article>
                 <article class="educations__education" data-school="haagse-hogeschool">
                     <img
-                        src="img/hogeschool_leiden.jpg"
+                        src="img/haagse_hogeschool.jpg"
                         alt=""
                         class="educations__education__img"
                     />
                     <div class="educations__education__info">
-                        <h3 class="educations__education__title">Informatica</h3>
+                        <h3 class="educations__education__title">HALO</h3>
                         <h4 class="educations__education__school">Haagse Hogeschool</h4>
                     </div>
                 </article>
