--- a/cms.html
+++ b/cms.html
@@ -46,19 +46,19 @@
                     <ul class="categories__list" id="js--categories--list">
                         <li class="categories__category">
                             <label for="zorg">
-                                <input type="checkbox" id="zorg" />
+                                <input type="checkbox" id="zorg" data-filter="zorg" />
                                 Zorg
                             </label>
                         </li>
                         <li class="categories__category">
                             <label for="onderwijs">
-                                <input type="checkbox" id="onderwijs" />
+                                <input type="checkbox" id="onderwijs" data-filter="onderwijs" />
                                 Onderwijs
                             </label>
                         </li>
                         <li class="categories__category">
                             <label for="techniek">
-                                <input type="checkbox" id="techniek" />
+                                <input type="checkbox" id="techniek" data-filter="techniek" />
                                 Techniek
                             </label>
                         </li>
@@ -101,37 +101,58 @@
                 </article>
             </section>
             <section class="educations" id="js--educations">
-                <article class="educations__education" data-school="hogeschool-leiden">
+                <article
+                    class="educations__education"
+                    data-school="hogeschool-leiden"
+                    data-label="techniek"
+                >
                     <img
                         src="img/hogeschool_leiden.jpg"
                         alt=""
                         class="educations__education__img"
                     />
                     <div class="educations__education__info">
-                        <h3 class="educations__education__title">Informatica</h3>
-                        <h4 class="educations__education__school">Hogeschool Leiden</h4>
+                        <div class="educations__education__details">
+                            <h3 class="educations__education__title">Informatica</h3>
+                            <h4 class="educations__education__school">Hogeschool Leiden</h4>
+                        </div>
+                        <span class="educations__education__label">Techniek</span>
                     </div>
                 </article>
-                <article class="educations__education" data-school="hogeschool-utrecht">
+                <article
+                    class="educations__education"
+                    data-school="hogeschool-utrecht"
+                    data-label="zorg"
+                >
                     <img
                         src="img/hogeschool_utrecht.jpg"
                         alt=""
                         class="educations__education__img"
                     />
                     <div class="educations__education__info">
-                        <h3 class="educations__education__title">Fysiotherapie</h3>
-                        <h4 class="educations__education__school">Hogeschool Utrecht</h4>
+                        <div class="educations__education__details">
+                            <h3 class="educations__education__title">Fysiotherapie</h3>
+                            <h4 class="educations__education__school">Hogeschool Utrecht</h4>
+                        </div>
+                        <span class="educations__education__label">Zorg</span>
                     </div>
                 </article>
-                <article class="educations__education" data-school="haagse-hogeschool">
+                <article
+                    class="educations__education"
+                    data-school="haagse-hogeschool"
+                    data-label="onderwijs"
+                >
                     <img
                         src="img/haagse_hogeschool.jpg"
                         alt=""
                         class="educations__education__img"
                     />
                     <div class="educations__education__info">
-                        <h3 class="educations__education__title">HALO</h3>
-                        <h4 class="educations__education__school">Haagse Hogeschool</h4>
+                        <div class="educations__education__details">
+                            <h3 class="educations__education__title">HALO</h3>
+                            <h4 class="educations__education__school">Haagse Hogeschool</h4>
+                        </div>
+                        <span class="educations__education__label">Onderwijs</span>
                     </div>
                 </article>
             </section>
