--- a/cms.html
+++ b/cms.html
@@ -12,7 +12,7 @@
             <input
                 type="search"
                 name="search"
-                id="js--search"
+                id="js--search--bar"
                 class="search"
                 placeholder="Zoek naar een opleiding"
             />
