--- a/cms.html
+++ b/cms.html
@@ -86,61 +86,68 @@
                     </ul>
                 </article>
             </section>
-            <section class="educations" id="js--educations">
-                <article
-                    class="educations__education"
-                    data-school="hogeschool-leiden"
-                    data-label="techniek"
-                >
-                    <img
-                        src="img/hogeschool_leiden.jpg"
-                        alt=""
-                        class="educations__education__img"
-                    />
-                    <div class="educations__education__info">
-                        <div class="educations__education__details">
-                            <h3 class="educations__education__title">Informatica</h3>
-                            <h4 class="educations__education__school">Hogeschool Leiden</h4>
+            <section class="educations educations--featured">
+                <h2 class="educations__title">Uitgelichte opleidingen</h2>
+                <div class="educations__grid">
+                    <article
+                        class="educations__education"
+                        data-school="hogeschool-leiden"
+                        data-label="techniek"
+                    >
+                        <img
+                            src="img/hogeschool_leiden.jpg"
+                            alt=""
+                            class="educations__education__img"
+                        />
+                        <div class="educations__education__info">
+                            <div class="educations__education__details">
+                                <h3 class="educations__education__title">Informatica</h3>
+                                <h4 class="educations__education__school">Hogeschool Leiden</h4>
+                            </div>
+                            <span class="educations__education__label">Techniek</span>
                         </div>
-                        <span class="educations__education__label">Techniek</span>
-                    </div>
-                </article>
-                <article
-                    class="educations__education"
-                    data-school="hogeschool-utrecht"
-                    data-label="zorg"
-                >
-                    <img
-                        src="img/hogeschool_utrecht.jpg"
-                        alt=""
-                        class="educations__education__img"
-                    />
-                    <div class="educations__education__info">
-                        <div class="educations__education__details">
-                            <h3 class="educations__education__title">Fysiotherapie</h3>
-                            <h4 class="educations__education__school">Hogeschool Utrecht</h4>
+                    </article>
+                    <article
+                        class="educations__education"
+                        data-school="hogeschool-utrecht"
+                        data-label="zorg"
+                    >
+                        <img
+                            src="img/hogeschool_utrecht.jpg"
+                            alt=""
+                            class="educations__education__img"
+                        />
+                        <div class="educations__education__info">
+                            <div class="educations__education__details">
+                                <h3 class="educations__education__title">Fysiotherapie</h3>
+                                <h4 class="educations__education__school">Hogeschool Utrecht</h4>
+                            </div>
+                            <span class="educations__education__label">Zorg</span>
                         </div>
-                        <span class="educations__education__label">Zorg</span>
-                    </div>
-                </article>
-                <article
-                    class="educations__education"
-                    data-school="haagse-hogeschool"
-                    data-label="onderwijs"
-                >
-                    <img
-                        src="img/haagse_hogeschool.jpg"
-                        alt=""
-                        class="educations__education__img"
-                    />
-                    <div class="educations__education__info">
-                        <div class="educations__education__details">
-                            <h3 class="educations__education__title">HALO</h3>
-                            <h4 class="educations__education__school">Haagse Hogeschool</h4>
+                    </article>
+                    <article
+                        class="educations__education"
+                        data-school="haagse-hogeschool"
+                        data-label="onderwijs"
+                    >
+                        <img
+                            src="img/haagse_hogeschool.jpg"
+                            alt=""
+                            class="educations__education__img"
+                        />
+                        <div class="educations__education__info">
+                            <div class="educations__education__details">
+                                <h3 class="educations__education__title">HALO</h3>
+                                <h4 class="educations__education__school">Haagse Hogeschool</h4>
+                            </div>
+                            <span class="educations__education__label">Onderwijs</span>
                         </div>
-                        <span class="educations__education__label">Onderwijs</span>
-                    </div>
-                </article>
+                    </article>
+                </div>
+            </section>
+            <section class="educations educations--all">
+                <h2 class="educations__title">Alle opleidingen</h2>
+                <div class="educations__grid" id="js--educations"></div>
             </section>
         </main>
         <script src="js/cms.js"></script>
