Styled anchor card

--- a/cms.html
+++ b/cms.html
@@ -89,7 +89,8 @@
             <section class="educations educations--featured">
                 <h2 class="educations__title">Uitgelichte opleidingen</h2>
                 <div class="educations__grid">
-                    <article
+                    <a
+                        href="index.html"
                         class="educations__education"
                         data-school="hogeschool-leiden"
                         data-label="techniek"
@@ -106,7 +107,7 @@
                             </div>
                             <span class="educations__education__label">Techniek</span>
                         </div>
-                    </article>
+                    </a>
                     <article
                         class="educations__education"
                         data-school="hogeschool-utrecht"
