extra foto's gijs toegevoegd + linking foto's

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <!-- footer -->
             <div class="bottomBar">
                 <div class="progressBar">
-                    <h2 class="footerTitle">u bevind zich:</h2>
+                    <h2 class="footerTitle">je bevindt je:</h2>
                     <h2 id="place">Buiten</h2>
                     <div class="locatieInformatie">
                         <button class="infoBtn">?</button>
