Final commit for demo

--- a/cms.html
+++ b/cms.html
@@ -88,7 +88,7 @@
             </section>
             <section class="educations educations--featured">
                 <h2 class="educations__title">Uitgelichte opleidingen</h2>
-                <div class="educations__grid">
+                <div class="educations__grid" id="js--featured--educations">
                     <a
                         href="index.html"
                         class="educations__education"
