Added four achievements with some basic styling

--- a/tour.html
+++ b/tour.html
@@ -14,7 +14,8 @@
             <div class="startIntructions">
                 <h3 class="startTitle">Rondkijken:</h3>
                 <p class="startTekst">
-                    klik en sleep de muis om de camera te draaien en rond te kijken.
+                    klik en sleep de muis om de camera te draaien en rond te
+                    kijken.
                 </p>
                 <div class="startImage"></div>
             </div>
@@ -51,19 +52,25 @@
 
                     <div class="header__buttons">
                         <button id="vr-button" class="button">VR</button>
-                        <button class="button" id="achievement--button">
-                            <img src="img/achievement_icon.svg" alt="" />
+                        <button class="button" id="js--achievements--button">
+                            <img src="icons/achievement_icon.svg" alt="" />
                         </button>
                     </div>
                 </div>
             </header>
 
+            <section class="achievements" id="js--achievements">
+                <h2 class="achievements__title">Prestaties</h2>
+                <ul class="achievements__list" id="js--achievements--list"></ul>
+            </section>
+
             <!-- infospots -->
             <article class="infospot" id="infospot--1" style="display: none">
                 <h2 class="infospot__title">Welkom!</h2>
                 <p class="infospot__content">
-                    Deze experience is bedoeld om mensen een indruk te geven van een school en een
-                    opleiding. Dit wordt gedaan met het gebruik van 360° camera- en videobeelden.
+                    Deze experience is bedoeld om mensen een indruk te geven van
+                    een school en een opleiding. Dit wordt gedaan met het
+                    gebruik van 360° camera- en videobeelden.
                 </p>
             </article>
 
