Progress gets locally saved and styled the progress bar

--- a/tour.html
+++ b/tour.html
@@ -46,7 +46,10 @@
 
                     <div class="progress__container">
                         <div class="progress">
-                            <div id="progress--bar" class="progress__bar"></div>
+                            <div
+                                id="js--progress--bar"
+                                class="progress__bar"
+                            ></div>
                         </div>
                     </div>
 
