start mobile first

--- a/tour.html
+++ b/tour.html
@@ -8,8 +8,15 @@
         <title>Opleiding360</title>
     </head>
     <body>
+        <div class="orientatie">
+            <div class="orientatie-tekst">
+                <h3>draai je scherm 90 graden</h3>
+
+            </div>
+            
+        </div>
         <!-- startscherm -->
-        <div class="startScherm" id="startScherm">
+        <!-- <div class="startScherm" id="startScherm">
             <button id="startButton" class="startButton">Start!</button>
             <div class="startIntructions">
                 <h3 class="startTitle">Rondkijken:</h3>
@@ -35,7 +42,7 @@
                 <h3>VR modus</h3>
                 <h3>Prestaties</h3>
             </div>
-        </div>
+        </div> -->
 
         <!-- main panorama -->
         <main class="pan">
