items toegevoegd als infospots

--- a/tour.html
+++ b/tour.html
@@ -74,6 +74,49 @@
                 </p>
             </article>
 
+            <!-- laptop tekst -->
+            <article class="infospot" id="laptopInfo" style="display: none">
+                <h2 class="infospot__title">De laptop</h2>
+                <p class="infospot__content">
+                    Zonder laptop is deze opleiding niet te volgen, de opleiding gaat immers over informatica.
+                    Zorg er dus voor dat je een laptop hebt met een goede processor en genoeg (werk)geheugen. 
+                </p>
+            </article>
+            <!-- boeken tekst -->
+            <article class="infospot" id="boekenInfo" style="display: none">
+                <h2 class="infospot__title">De boeken</h2>
+                <p class="infospot__content">
+                    Veel vakken maken gebruik van boeken als lesmateriaal, veel van deze boeken gebruik je nog voor de rest van je carrière in de informatica.
+                    Deze boeken kan je kopen in de boekenwinkel van de hogeschool links naast de hoofdingang. Of tweedehands online.
+                </p>
+            </article>
+            <!-- bierglas tekst -->
+            <article class="infospot" id="bierInfo" style="display: none">
+                <h2 class="infospot__title">Biertje</h2>
+                <p class="infospot__content">
+                    Na een dag hard studeren kan je samen met je studiegenoten genieten van een koud pilsje of een ander drankje in het café.
+                    De studievereniging Syntax organiseert ook genoeg leuke activiteiten naast het studeren zoals een maandelijkse borrel. 
+                </p>
+            </article>
+            <!-- raspberry pi tekst -->
+            <article class="infospot" id="raspberryPiInfo" style="display: none">
+                <h2 class="infospot__title">Raspberry Pi</h2>
+                <p class="infospot__content">
+                    De Raspberry Pi moet je aanschaffen voor een aantal vakken in het eerste jaar, zoals bijvoorbeeld de challenge weeks.
+                    De Raspberry Pi is als het ware een kleine computer die je zelf kan installeren. Met de Raspberry Pi kun je ook hardware onderdelen aansturen.
+                    De mogelijkheden van dit kleine computertje zijn eindeloos 
+                </p>
+            </article>
+            <!-- hardwarebox tekst -->
+            <article class="infospot" id="hardwareBoxInfo" style="display: none">
+                <h2 class="infospot__title">hardware box</h2>
+                <p class="infospot__content">
+                    Voor een aantal vakken in het eerste jaar en bij sommige specialisaties in het tweede jaar maak je gebruik van een hardware box met verschillende onderdelen bijvoorbeeld weerstanden, LED-jes, knoppen etc.
+                    je leert in deze lessen hoe je de verschillende hardware onderdelen aan moet sluiten en moet programmeren door bijvoorbeeld een arduino. 
+                </p>
+            </article>
+
+
             <!-- footer -->
             <div class="bottomBar">
                 <div class="progressBar">
