info over het lab toegevoegd

--- a/tour.html
+++ b/tour.html
@@ -16,7 +16,7 @@
             
         </div>
         <!-- startscherm -->
-        <!-- <div class="startScherm" id="startScherm">
+        <div class="startScherm" id="startScherm">
             <button id="startButton" class="startButton">Start!</button>
             <div class="startIntructions">
                 <h3 class="startTitle">Rondkijken:</h3>
@@ -42,7 +42,7 @@
                 <h3>VR modus</h3>
                 <h3>Prestaties</h3>
             </div>
-        </div> -->
+        </div>
 
         <!-- main panorama -->
         <main class="pan">
