--- a/tour.html
+++ b/tour.html
@@ -11,9 +11,7 @@
         <div class="orientatie">
             <div class="orientatie-tekst">
                 <h3>draai je scherm 90 graden</h3>
-
             </div>
-            
         </div>
         <!-- startscherm -->
         <div class="startScherm" id="startScherm">
@@ -21,8 +19,7 @@
             <div class="startIntructions">
                 <h3 class="startTitle">Rondkijken:</h3>
                 <p class="startTekst">
-                    klik en sleep de muis om de camera te draaien en rond te
-                    kijken.
+                    klik en sleep de muis om de camera te draaien en rond te kijken.
                 </p>
                 <div class="startImage"></div>
             </div>
@@ -53,10 +50,7 @@
 
                     <div class="progress__container">
                         <div class="progress">
-                            <div
-                                id="js--progress--bar"
-                                class="progress__bar"
-                            ></div>
+                            <div id="js--progress--bar" class="progress__bar"></div>
                         </div>
                     </div>
 
@@ -78,9 +72,8 @@
             <article class="infospot" id="infospot--1" style="display: none">
                 <h2 class="infospot__title">Welkom!</h2>
                 <p class="infospot__content">
-                    Deze experience is bedoeld om mensen een indruk te geven van
-                    een school en een opleiding. Dit wordt gedaan met het
-                    gebruik van 360° camera- en videobeelden.
+                    Deze experience is bedoeld om mensen een indruk te geven van een school en een
+                    opleiding. Dit wordt gedaan met het gebruik van 360° camera- en videobeelden.
                 </p>
             </article>
 
@@ -88,44 +81,52 @@
             <article class="infospot" id="laptopInfo" style="display: none">
                 <h2 class="infospot__title">De laptop</h2>
                 <p class="infospot__content">
-                    Zonder laptop is deze opleiding niet te volgen, de opleiding gaat immers over informatica.
-                    Zorg er dus voor dat je een laptop hebt met een goede processor en genoeg (werk)geheugen. 
+                    Zonder laptop is deze opleiding niet te volgen, de opleiding gaat immers over
+                    informatica. Zorg er dus voor dat je een laptop hebt met een goede processor en
+                    genoeg (werk)geheugen.
                 </p>
             </article>
             <!-- boeken tekst -->
             <article class="infospot" id="boekenInfo" style="display: none">
                 <h2 class="infospot__title">De boeken</h2>
                 <p class="infospot__content">
-                    Veel vakken maken gebruik van boeken als lesmateriaal, veel van deze boeken gebruik je nog voor de rest van je carrière in de informatica.
-                    Deze boeken kan je kopen in de boekenwinkel van de hogeschool links naast de hoofdingang. Of tweedehands online.
+                    Veel vakken maken gebruik van boeken als lesmateriaal, veel van deze boeken
+                    gebruik je nog voor de rest van je carrière in de informatica. Deze boeken kan
+                    je kopen in de boekenwinkel van de hogeschool links naast de hoofdingang. Of
+                    tweedehands online.
                 </p>
             </article>
             <!-- bierglas tekst -->
             <article class="infospot" id="bierInfo" style="display: none">
                 <h2 class="infospot__title">Biertje</h2>
                 <p class="infospot__content">
-                    Na een dag hard studeren kan je samen met je studiegenoten genieten van een koud pilsje of een ander drankje in het café.
-                    De studievereniging Syntax organiseert ook genoeg leuke activiteiten naast het studeren zoals een maandelijkse borrel. 
+                    Na een dag hard studeren kan je samen met je studiegenoten genieten van een koud
+                    pilsje of een ander drankje in het café. De studievereniging Syntax organiseert
+                    ook genoeg leuke activiteiten naast het studeren zoals een maandelijkse borrel.
                 </p>
             </article>
             <!-- raspberry pi tekst -->
             <article class="infospot" id="raspberryPiInfo" style="display: none">
                 <h2 class="infospot__title">Raspberry Pi</h2>
                 <p class="infospot__content">
-                    De Raspberry Pi moet je aanschaffen voor een aantal vakken in het eerste jaar, zoals bijvoorbeeld de challenge weeks.
-                    De Raspberry Pi is als het ware een kleine computer die je zelf kan installeren. Met de Raspberry Pi kun je ook hardware onderdelen aansturen.
-                    De mogelijkheden van dit kleine computertje zijn eindeloos 
+                    De Raspberry Pi moet je aanschaffen voor een aantal vakken in het eerste jaar,
+                    zoals bijvoorbeeld de challenge weeks. De Raspberry Pi is als het ware een
+                    kleine computer die je zelf kan installeren. Met de Raspberry Pi kun je ook
+                    hardware onderdelen aansturen. De mogelijkheden van dit kleine computertje zijn
+                    eindeloos.
                 </p>
             </article>
             <!-- hardwarebox tekst -->
             <article class="infospot" id="hardwareBoxInfo" style="display: none">
                 <h2 class="infospot__title">hardware box</h2>
                 <p class="infospot__content">
-                    Voor een aantal vakken in het eerste jaar en bij sommige specialisaties in het tweede jaar maak je gebruik van een hardware box met verschillende onderdelen bijvoorbeeld weerstanden, LED-jes, knoppen etc.
-                    je leert in deze lessen hoe je de verschillende hardware onderdelen aan moet sluiten en moet programmeren door bijvoorbeeld een arduino. 
+                    Voor een aantal vakken in het eerste jaar en bij sommige specialisaties in het
+                    tweede jaar maak je gebruik van een hardware box met verschillende onderdelen
+                    bijvoorbeeld weerstanden, LED-jes, knoppen etc. je leert in deze lessen hoe je
+                    de verschillende hardware onderdelen aan moet sluiten en moet programmeren door
+                    bijvoorbeeld een arduino.
                 </p>
             </article>
-
 
             <!-- footer -->
             <div class="bottomBar">
