Added reset button and styled the rest of the buttons

--- a/tour.html
+++ b/tour.html
@@ -56,8 +56,11 @@
 
                     <div class="header__buttons">
                         <button id="vr-button" class="button">VR</button>
-                        <button class="button" id="js--achievements--button">
+                        <button class="button button--achievements" id="js--achievements--button">
                             <img src="icons/achievement_icon.svg" alt="" />
+                        </button>
+                        <button class="button button--reset" id="js--reset--button">
+                            <img src="icons/reset_icon.svg" alt="" />
                         </button>
                     </div>
                 </div>
