Added button to close achievements box

--- a/tour.html
+++ b/tour.html
@@ -14,7 +14,7 @@
             </div>
         </div>
         <!-- startscherm -->
-        <div class="startScherm" id="startScherm">
+        <!-- <div class="startScherm" id="startScherm">
             <button id="startButton" class="startButton">Start!</button>
             <div class="startIntructions">
                 <h3 class="startTitle">Rondkijken:</h3>
@@ -40,7 +40,7 @@
                 <h3>VR modus</h3>
                 <h3>Prestaties</h3>
             </div>
-        </div>
+        </div> -->
 
         <!-- main panorama -->
         <main class="pan">
@@ -63,8 +63,11 @@
                 </div>
             </header>
 
-            <section class="achievements" id="js--achievements">
+            <section class="achievements achievements--open" id="js--achievements">
                 <h2 class="achievements__title">Prestaties</h2>
+                <button class="achievements__close">
+                    <img src="icons/close_icon.svg" alt="" />
+                </button>
                 <ul class="achievements__list" id="js--achievements--list"></ul>
             </section>
 
