startscherm grid + mobiel

--- a/tour.html
+++ b/tour.html
@@ -16,7 +16,7 @@
             
         </div>
         <!-- startscherm -->
-        <!-- <div class="startScherm" id="startScherm">
+        <div class="startScherm" id="startScherm">
             <button id="startButton" class="startButton">Start!</button>
             <div class="startIntructions">
                 <h3 class="startTitle">Rondkijken:</h3>
@@ -26,23 +26,22 @@
                 <div class="startImage"></div>
             </div>
             <div class="startFooter">
-                <h3 class="startFooterTekst">
+                <p class="startTekst">
                     Hieronder is te vinden waar in de omgeving u zich nu bevind
-                </h3>
+                </p>
                 <img class="startFooterImage" src="img/img1.png" alt="" />
             </div>
             <div class="startSettings">
-                <h3 class="startFooterTekst">Instellingen</h3>
-                <h3>Fullscreen</h3>
+                <h3 class="startTekst">Instellingen</h3>
+                <h3 class="startTekst">Fullscreen</h3>
                 <img class="startSettingsImage" src="img/img1.png" alt="" />
             </div>
 
             <div class="startOptions">
                 <img class="startOptionsImage" src="img/img1.png" alt="" />
-                <h3>VR modus</h3>
-                <h3>Prestaties</h3>
+                <h3 class="startTekst">Prestaties</h3>
             </div>
-        </div> -->
+        </div>
 
         <!-- main panorama -->
         <main class="pan">
