Added a pop-up which allows the user to end or continue the tour.

--- a/tour.html
+++ b/tour.html
@@ -41,6 +41,20 @@
             </div>
         </div>
 
+        <div class="end" id="js--end">
+            <div class="end__content">
+                <h3 class="end__title">Weet je zeker dat je de tour wilt beëindigen?</h3>
+                <div class="end__buttons">
+                    <button id="js--end--button" class="end__button end__button--red">
+                        Beëindig
+                    </button>
+                    <button id="js--continue--button" class="end__button end__button--green">
+                        Doorgaan
+                    </button>
+                </div>
+            </div>
+        </div>
+
         <!-- main panorama -->
         <main class="pan">
             <header class="header">
