End panorama finished

--- a/tour.html
+++ b/tour.html
@@ -95,6 +95,14 @@
                 </p>
             </article>
 
+            <article class="infospot" id="js--infospot--end" style="display: none">
+                <h2 class="infospot__title">Dit was het dan!</h2>
+                <p class="infospot__content">
+                    Hey goed gedaan! je hebt nu alles gezien over de opleiding informatica. Kijk
+                    gerust nog even rond of ga opzoek naar nog niet gevonden voorwerpen.
+                </p>
+            </article>
+
             <!-- navigatie tekst -->
             <article class="infospot" id="navInfo" style="display: none">
                 <h2 class="infospot__title">De borden</h2>
