User can now leave the tour

--- a/tour.html
+++ b/tour.html
@@ -101,6 +101,7 @@
                     Hey goed gedaan! je hebt nu alles gezien over de opleiding informatica. Kijk
                     gerust nog even rond of ga opzoek naar nog niet gevonden voorwerpen.
                 </p>
+                <a class="button button--quit" href="index.html">Verlaat Tour</a>
             </article>
 
             <!-- navigatie tekst -->
