Added achievement pop-up message

--- a/tour.html
+++ b/tour.html
@@ -61,6 +61,10 @@
                 </div>
             </header>
 
+            <article class="message" id="js--message">
+                <h3 class="message__title" id="js--message--title">Prestatie placheolder</h3>
+            </article>
+
             <section class="achievements" id="js--achievements">
                 <h2 class="achievements__title">Prestaties</h2>
                 <button class="achievements__close" id="js--achievements--close--button">
@@ -82,64 +86,68 @@
             <article class="infospot" id="navInfo" style="display: none">
                 <h2 class="infospot__title">De borden</h2>
                 <p class="infospot__content">
-                    Als je verdwaald raakt zijn op de borden te vinden waar de kernen en lokalen zich bevinden.
+                    Als je verdwaald raakt zijn op de borden te vinden waar de kernen en lokalen
+                    zich bevinden.
                 </p>
             </article>
             <!-- pooltafel tekst -->
             <article class="infospot" id="poolInfo" style="display: none">
                 <h2 class="infospot__title">De pooltafel</h2>
                 <p class="infospot__content">
-                    Ook kun je hier met je vrienden spelletjes spelen zoals gebruik maken van deze pooltafel!
+                    Ook kun je hier met je vrienden spelletjes spelen zoals gebruik maken van deze
+                    pooltafel!
                 </p>
             </article>
             <!-- balustrade tekst -->
             <article class="infospot" id="balustradeInfo" style="display: none">
                 <h2 class="infospot__title">De balustrade</h2>
                 <p class="infospot__content">
-                    Informatica vind plaats op verdieping 1 tot en met 3. 
-                    Dit is te bereiken via de trap, lift of de bruggen.
+                    Informatica vind plaats op verdieping 1 tot en met 3. Dit is te bereiken via de
+                    trap, lift of de bruggen.
                 </p>
             </article>
             <!-- challengeweek tekst -->
             <article class="infospot" id="challengeInfo" style="display: none">
                 <h2 class="infospot__title">De challengeweeks</h2>
                 <p class="infospot__content">
-                    Voordat je een keuze maakt over je specialisatie worden er 4 challengeweeks gehouden.
-                    Waar de student een voorproefje krijgen van de inhoud van de specialisaties.
-                    Hierin worden ze een week lang uitgedaagd om groepsgewijs vette dingen te maken!
+                    Voordat je een keuze maakt over je specialisatie worden er 4 challengeweeks
+                    gehouden. Waar de student een voorproefje krijgen van de inhoud van de
+                    specialisaties. Hierin worden ze een week lang uitgedaagd om groepsgewijs vette
+                    dingen te maken!
                 </p>
             </article>
             <!-- studiepunten tekst -->
             <article class="infospot" id="studiepuntenInfo" style="display: none">
                 <h2 class="infospot__title">Studiepunten</h2>
                 <p class="infospot__content">
-                    Informatica heeft net zoals alle HBO opleidingen 240 EC(studiepunten) dat word verdeeld over:
-                    propedeuse(1e jaar, 60EC, vakken), hoofdfase(2e &3e jaar, 90EC, vakken), stage(3e & 4e jaar, 30EC), minor(3e & 4e jaar, 30EC) en een afstudeerstage(4e jaar, 30EC).
-                    Als je alles hebt gehaald? Dan heb je je diploma!
+                    Informatica heeft net zoals alle HBO opleidingen 240 EC(studiepunten) dat word
+                    verdeeld over: propedeuse(1e jaar, 60EC, vakken), hoofdfase(2e &3e jaar, 90EC,
+                    vakken), stage(3e & 4e jaar, 30EC), minor(3e & 4e jaar, 30EC) en een
+                    afstudeerstage(4e jaar, 30EC). Als je alles hebt gehaald? Dan heb je je diploma!
                 </p>
             </article>
             <!-- 3D printer tekst -->
             <article class="infospot" id="printerInfo" style="display: none">
                 <h2 class="infospot__title">3D printers</h2>
                 <p class="infospot__content">
-                    In het lab zijn meerdere 3D printers te vinden.
-                    Hier kan je op aanvraag je modellen printen voor school of leuke hobby projecten.
+                    In het lab zijn meerdere 3D printers te vinden. Hier kan je op aanvraag je
+                    modellen printen voor school of leuke hobby projecten.
                 </p>
             </article>
             <!-- soldeerbouten tekst -->
             <article class="infospot" id="soldeerInfo" style="display: none">
                 <h2 class="infospot__title">soldeerbouten</h2>
                 <p class="infospot__content">
-                    Je kan je hier gebruik maken van soldeerbouten.
-                    Voor als je printplaten moet solderen of componenten aan elkaar moet maken.
+                    Je kan je hier gebruik maken van soldeerbouten. Voor als je printplaten moet
+                    solderen of componenten aan elkaar moet maken.
                 </p>
             </article>
             <!-- hardware tekst -->
             <article class="infospot" id="hardwareInfo" style="display: none">
                 <h2 class="infospot__title">Hardware</h2>
                 <p class="infospot__content">
-                    Tijdens de opleiding is het vereist een aantal hardware apparaten te kopen,
-                    deze heb je nodig voor een aantal vakken
+                    Tijdens de opleiding is het vereist een aantal hardware apparaten te kopen, deze
+                    heb je nodig voor een aantal vakken
                 </p>
             </article>
 
