Added pop-up message that asks the user to end or continue the tour once it is finished

--- a/tour.html
+++ b/tour.html
@@ -55,6 +55,16 @@
             </div>
         </div>
 
+        <div class="finish" id="js--finish">
+            <div class="finish__content">
+                <h3 class="finish__title">Je hebt de tour voltooid!</h3>
+                <div class="finish__buttons">
+                    <button id="js--finish--end--button" class="finish__button finish__button--red">Verlaat</button>
+                    <button id="js--finish--continue--button" class="finish__button finish__button--green">Doorgaan</button>
+                </div>
+            </div>
+        </div>
+
         <!-- main panorama -->
         <main class="pan">
             <header class="header">
