--- a/tour.html
+++ b/tour.html
@@ -38,6 +38,7 @@
             <div class="startOptions">
                 <img class="startOptionsImage" src="img/img1.png" alt="" />
                 <h3 class="startTekst">Prestaties</h3>
+                <h3 class="startTekst">Reset</h3>
             </div>
         </div>
 
@@ -89,7 +90,7 @@
             </header>
 
             <article class="message" id="js--message">
-                <h3 class="message__title" id="js--message--title">Prestatie placheolder</h3>
+                <h3 class="message__title" id="js--message--title">Prestatie placeholder</h3>
             </article>
 
             <section class="achievements" id="js--achievements">
